# ChangeLog file for MonetDB5
# This file is updated with Maddlog

* Tue Nov  8 2016 Martin Kersten <mk@cwi.nl>
- The allocation schemes for MAL blocks and Variables has been turned
  into block-based.  This reduces the number of malloc()/free() calls.
