@@ -69,7 +69,7 @@ function user.s8_1():void;
     C_1:bat[:oid] := sql.tid(X_0,"sys","dbg");
     X_4:bat[:int] := sql.bind(X_0,"sys","dbg","a",0);
     X_7 := algebra.projection(C_1,X_4);
-    (X_8,r1_11,r2_11) := group.subgroupdone(X_7);
+    (X_8,r1_11,r2_11) := group.groupdone(X_7);
     X_11 := algebra.projection(r1_11,X_7);
     X_14:bat[:int] := sql.bind(X_0,"sys","dbg","b",0);
     X_16 := algebra.projection(C_1,X_14);
@@ -155,7 +155,7 @@ function user.s20_1():void;
     C_1:bat[:oid] := sql.tid(X_0,"sys","dbg");
     X_4:bat[:int] := sql.bind(X_0,"sys","dbg","a",0);
     X_7 := algebra.projection(C_1,X_4);
-    (X_8,r1_11,r2_11) := group.subgroupdone(X_7);
+    (X_8,r1_11,r2_11) := group.groupdone(X_7);
     X_11 := algebra.projection(r1_11,X_7);
     X_14:bat[:int] := sql.bind(X_0,"sys","dbg","b",0);
     X_16 := algebra.projection(C_1,X_14);
